--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.SCHEDULE_JOB" />
 
     <application
         android:allowBackup="true"
@@ -16,9 +16,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CSE225"
         tools:targetApi="31">
+
+        <activity
+            android:name=".CA2JobServiceNotification"
+            android:exported="false" />
+        <activity
+            android:name=".CA2JobScheduler"
+            android:exported="false"/>
+        <activity
+            android:name=".TextNotificationJobScheduler"
+            android:exported="false" />
         <activity
             android:name=".JobSchedulerEx"
-            android:exported="false" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".ToolBarEx"
             android:exported="false" />
@@ -30,13 +47,7 @@
             android:exported="false" />
         <activity
             android:name=".ScrollViewEx"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".RatingBarEx"
             android:exported="false" />
@@ -65,14 +76,17 @@
             android:exported="false" />
         <activity
             android:name=".AlarmManagerBroadcast"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
 
         <receiver android:name=".AlarmManagerBroadcast" />
-        <service android:name=".MyJobService"
-            android:exported="true"
+
+        <service
+            android:name=".JobSchedulerEx"
+            android:exported="false"
+            android:enabled="true"
             android:permission="android.permission.BIND_JOB_SERVICE" />
     </application>
 
